<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shoegaze Mode</string>

    <string name="master_switch_title">Toggle Shoegaze Mode</string>
    
    <string name="font_roboto_regular">sans-serif</string>
    <string name="font_roboto_light">sans-serif-light</string>
    
    <string name="options_header">Shoegaze Settings</string>
    <string name="options_save">Save</string>
    <string name="options_cancel">Cancel</string>
    <string name="options_alpha">Alpha: </string>
	<string name="options_auto_flash">Flash:</string>
    <string name="options_light_sensing_mode">Auto:</string>
    
    <string name="settings_group_settings">Settings</string>
    <string name="settings_group_general">General</string>
    <string name="settings_onboot_title">Start on Boot</string>
    <string name="settings_onboot_summary">Start persistent notification on boot?</string>
    <string name="settings_help_title">Help</string>
    <string name="settings_about_title">About</string>
    <string name="settings_changelog_title">Changelog</string>
    <string name="settings_key_onboot">chkOnBoot</string>
    
    <string name="help_activity_title">Help</string>
    <string name="help_getting_started_title">Getting Started</string>
    <string name="help_getting_start_step_one">Toggle the switch in the action bar</string>
    <string name="help_getting_started_step_one_desc">Step One</string>
    <string name="help_getting_start_step_two">Pull down the notification shade and tap the start button in the notification</string>
    <string name="help_getting_started_step_two_desc">Step Two</string>
    <string name="help_getting_started_step_three_title">Quick Details:</string>
    <string name="help_getting_started_step_three_a">1.) Stop shoegazing</string>
    <string name="help_getting_started_step_three_b">2.) Swap cameras</string>
    <string name="help_getting_started_step_three_c">3.) Open options dialog</string>
    <string name="help_getting_started_step_three_desc">Step Three</string>
    <string name="help_in_depth_title">In Depth</string>
    
    <string name="help_details_options_img_title">Options Dialog</string>
    <string name="help_details_alpha_title">Alpha</string>
    <string name="help_details_alpha_summary">The transparency value of the overlay.  The higher the alpha value, the higher the transparency.</string>
    <string name="help_details_auto_mode_title">Auto-Mode</string>
    <string name="help_details_auto_mode_summary">Automatically controls the alpha setting of the overlay by analyzing the incoming light sensor values.  When this mode is turned on, the alpha slider will automatically be disabled since the application will control the alpha value.</string>
    
    <string name="about_credits_title">Credits</string>
    <string name="about_version_title">Version</string>
    <string name="about_user_image_desc">G+ Default</string>
    <string name="about_credits_developer_name">Kyle Formeck</string>
    <string name="about_credits_developer_summary">Developer</string>
    <string name="about_credits_filip_name">Filip Cernak</string>
    <string name="about_credits_filip_summary">Icon design, UI and UX suggestions</string>
    
    <string name="shoegaze_prefs">com.kformeck.shoegaze.APP_PREFS</string>
    <string name="pref_app_state">com.kformeck.shoegaze.prefs.APP_STATE</string>
    <string name="pref_user_alpha">com.kformeck.shoegaze.prefs.USER_ALPHA</string>
    <string name="pref_camera_type">com.kformeck.shoegaze.prefs.CAMERA_TYPE</string>
	<string name="pref_light_sensing_mode">com.kformeck.shoegaze.prefs.LIGHT_SENSING_MODE</string>
    
	<string name="action_start">com.kformeck.shoegaze.action.SHOEGAZE_START</string>
	<string name="action_stop">com.kformeck.shoegaze.action.SHOEGAZE_STOP</string>
	<string name="action_already_stop">com.kformeck.shoegaze.action.SHOEGAZE_ALREADY_STOP</string>
	<string name="action_restart">com.kformeck.shoegaze.action.SHOEGAZE_RESTART</string>
	<string name="action_toggle_alpha">com.kformeck.shoegaze.action.SHOEGAZE_TOGGLE_ALPHA</string>
	<string name="action_toggle_options">com.kformeck.shoegaze.action.SHOEGAZE_TOGGLE_OPTIONS</string>
	<string name="action_toggle_lsm">com.kformeck.shoegaze.action.SHOEGAZE_TOGGLE_LIGHT_SENSING_MODE</string>
	<string name="action_toggle_camera_mode">com.kformeck.shoegaze.action.SHOEGAZE_TOGGLE_CAMERA_MODE</string>
	<string name="action_toggle_flash">com.kformeck.shoegaze.actions.SHOEGAZE_TOGGLE_FLASH</string>
	
    <string name="action_help">Help</string>
    <string name="action_shoegaze_state_toggled">com.kformeck.shoegaze.actions.SHOEGAZE_STATE_TOGGLED</string>
    
	
    <string name="extra_app_state">com.kformeck.shoegaze.APP_STATE</string>
    <string name="extra_alpha">com.kformeck.shoegaze.action.SHOEGAZE_EXTRA_ALPHA</string>
    <string name="extra_lsm">com.kformeck.shoegaze.action.SHOEGAZE_EXTRA_LSM</string>
    <string name="extra_flash_is_on">com.kformeck.shoegaze.FLASH_IS_ON</string>  
    
</resources>
