<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_group_settings">
    	<CheckBoxPreference
    	    android:key="@string/settings_key_onboot"
        	android:title="@string/settings_onboot_title"
        	android:summary="@string/settings_onboot_summary"
        	android:defaultValue="false"/>  
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_group_general">
		<Preference android:title="@string/settings_help_title">
		    <intent 
		        android:targetPackage="com.example.onthego"
		        android:targetClass="com.kformeck.shoegaze.ui.activities.HelpActivity"/>
		</Preference>
		<PreferenceScreen android:title="@string/settings_about_title"/>
		<PreferenceScreen android:title="@string/settings_changelog_title"/>
    </PreferenceCategory>
</PreferenceScreen>
