<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_card_container">
		
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/bg_card_view"
	        android:layout_marginLeft="@dimen/card_margin_side"
	        android:layout_marginRight="@dimen/card_margin_side"
			android:layout_marginTop="@dimen/card_margin_tb"
			android:layout_marginBottom="@dimen/card_margin_tb">
			<ImageView
			    android:layout_width="match_parent"
			    android:layout_height="63dp"
			    android:layout_margin="10dp"
			    android:src="@drawable/getting_started_step_one"
			    android:contentDescription="@string/help_getting_started_step_one_desc"/>
			<TextView 
			    style="@style/HelpInstructionTextViewStyle"
			    android:text="@string/help_getting_start_step_one"/>
		</LinearLayout>
		
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/bg_card_view"
	        android:layout_marginLeft="@dimen/card_margin_side"
	        android:layout_marginRight="@dimen/card_margin_side"
			android:layout_marginBottom="@dimen/card_margin_tb">
			<ImageView
			    android:layout_width="match_parent"
			    android:layout_height="140dp"
			    android:layout_margin="10dp"
			    android:src="@drawable/getting_started_step_two"
			    android:contentDescription="@string/help_getting_started_step_two_desc"/>
			<TextView
			    style="@style/HelpInstructionTextViewStyle"
			    android:text="@string/help_getting_start_step_two"/>
		</LinearLayout>
		
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@drawable/bg_card_view"
		    android:layout_marginLeft="@dimen/card_margin_side"
		    android:layout_marginRight="@dimen/card_margin_side"
			android:layout_marginBottom="@dimen/card_margin_tb">
			<ImageView
			    android:layout_width="match_parent"
			    android:layout_height="145dp"
			    android:layout_margin="10dp"
			    android:src="@drawable/getting_started_step_three"
			    android:contentDescription="@string/help_getting_started_step_three_desc"/>
			<TextView
			    style="@style/HelpInstructionTextViewStyle"
			    android:text="@string/help_getting_started_step_three_title"/>
			<TextView 
				style="@style/HelpListTextViewStyle"
			    android:text="@string/help_getting_started_step_three_a"/>
			<TextView 
			    style="@style/HelpListTextViewStyle"
			    android:text="@string/help_getting_started_step_three_b"/>
			<TextView 
			    style="@style/HelpListTextViewStyle"
			    android:layout_marginBottom="40dp"
			    android:text="@string/help_getting_started_step_three_c"/>
		</LinearLayout>
		
    </LinearLayout>
</ScrollView>
