<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_card_container">
    
    <!-- Alpha Card -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_card_view"
        android:layout_marginLeft="@dimen/card_margin_side"
        android:layout_marginRight="@dimen/card_margin_side"
		android:layout_marginTop="@dimen/card_margin_tb">
		<TextView
	        style="@style/HelpInstructionTextViewStyle"
	        android:text="@string/help_details_alpha_title"/>
		<View 
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:layout_marginLeft="2dp"
		    android:layout_marginRight="2dp"
		    android:background="@color/card_details_color"/>
		<TextView
		    style="@style/HelpInstructionTextViewStyle"
		    android:text="@string/help_details_alpha_summary"/>
	</LinearLayout> 
	
    <!-- Auto-Mode Card -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_card_view"
        android:layout_marginLeft="@dimen/card_margin_side"
        android:layout_marginRight="@dimen/card_margin_side"
		android:layout_marginTop="@dimen/card_margin_tb"
		android:layout_marginBottom="@dimen/card_margin_tb">
		<TextView
	        style="@style/HelpInstructionTextViewStyle"
	        android:text="@string/help_details_auto_mode_title"/>
		<View 
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:layout_marginLeft="2dp"
		    android:layout_marginRight="2dp"
		    android:background="@color/card_details_color"/>
		<TextView
		    style="@style/HelpInstructionTextViewStyle"
		    android:text="@string/help_details_auto_mode_summary"/>
	</LinearLayout> 
	

</LinearLayout>
