<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_card_container"> 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_card_view"
        android:layout_marginLeft="@dimen/card_margin_side"
        android:layout_marginRight="@dimen/card_margin_side"
		android:layout_marginTop="@dimen/card_margin_tb"
		android:layout_marginBottom="@dimen/card_margin_tb">
		<TextView
	        style="@style/CardHeaderTextViewStyle"
	        android:text="@string/about_credits_title"/>
    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
        	android:layout_marginLeft="@dimen/card_margin_side"
       		android:layout_marginRight="@dimen/card_margin_side"
			android:layout_marginTop="@dimen/card_margin_tb"
			android:layout_marginBottom="@dimen/card_margin_tb"
    	    android:orientation="horizontal">
    	    <ImageView
    	        android:layout_width="@dimen/about_user_image_size"
    	        android:layout_height="@dimen/about_user_image_size"
    	        android:layout_gravity="center"
    	        android:paddingRight="1dp"
    	        android:paddingBottom="1dp"
    	        android:background="@color/card_details_color"
    	        android:contentDescription="@string/about_user_image_desc"
    	        android:src="@drawable/user_image_me" />
    	    <LinearLayout
    	        android:layout_width="match_parent"
    	    	android:layout_height="wrap_content"
        		android:layout_marginLeft="@dimen/card_margin_side"
       			android:layout_marginRight="@dimen/card_margin_side"
				android:layout_marginTop="@dimen/card_margin_tb"
				android:layout_marginBottom="@dimen/card_margin_tb"
    	    	android:orientation="vertical">
    	    	<View 
			        android:layout_width="match_parent"
			        android:layout_height="2dp"
			        android:layout_marginLeft="2dp"
			        android:layout_marginRight="2dp"
			        android:background="@color/card_details_color"/>
    	       	<TextView
			        style="@style/CardTitleTextViewStyle"
			        android:text="@string/about_credits_developer_name"/>
    	       	<TextView
			        style="@style/CardSummaryTextViewStyle"
			        android:text="@string/about_credits_developer_summary"/>
    	    </LinearLayout>
    	</LinearLayout>
    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
        	android:layout_marginLeft="@dimen/card_margin_side"
       		android:layout_marginRight="@dimen/card_margin_side"
			android:layout_marginTop="@dimen/card_margin_tb"
			android:layout_marginBottom="@dimen/card_margin_tb"
    	    android:orientation="horizontal">
    	    <ImageView
    	        android:layout_width="@dimen/about_user_image_size"
    	        android:layout_height="@dimen/about_user_image_size"
    	        android:layout_gravity="center"
    	        android:paddingRight="1dp"
    	        android:paddingBottom="1dp"
    	        android:background="@color/card_details_color"
    	        android:contentDescription="@string/about_user_image_desc"
    	        android:src="@drawable/user_image_filip" />
    	    <LinearLayout
    	        android:layout_width="match_parent"
    	    	android:layout_height="wrap_content"
        		android:layout_marginLeft="@dimen/card_margin_side"
       			android:layout_marginRight="@dimen/card_margin_side"
				android:layout_marginTop="@dimen/card_margin_tb"
				android:layout_marginBottom="@dimen/card_margin_tb"
    	    	android:orientation="vertical">
    	    	<View 
			        android:layout_width="match_parent"
			        android:layout_height="2dp"
			        android:layout_marginLeft="2dp"
			        android:layout_marginRight="2dp"
			        android:background="@color/card_details_color"/>
    	       	<TextView
			        style="@style/CardTitleTextViewStyle"
			        android:text="@string/about_credits_filip_name"/>
    	       	<TextView
			        style="@style/CardSummaryTextViewStyle"
			        android:text="@string/about_credits_filip_summary"/>
    	    </LinearLayout>
    	</LinearLayout>
    </LinearLayout>

</LinearLayout>
