<?xml version="1.0" encoding="utf-8"?>
<GridLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/options_overlay_shape" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:layout_margin="@dimen/options_view_margin"
        android:layout_row="0"
        android:text="@string/options_alpha" />
    <SeekBar
        android:id="@+id/sliderAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_margin="@dimen/options_view_margin"
        android:layout_row="0"
        android:max="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_margin="@dimen/options_view_margin"
        android:layout_row="1"
        android:text="@string/options_auto_flash" />
    <Switch
        android:id="@+id/switchAutoflash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_margin="@dimen/options_view_margin"
        android:layout_row="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_margin="@dimen/options_view_margin"
        android:layout_row="2"
        android:text="@string/options_light_sensing_mode" />
    <Switch
        android:id="@+id/switchLightSensingMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_margin="@dimen/options_view_margin"
        android:layout_row="2" />
</GridLayout>