<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/options_width"
    android:layout_height="@dimen/options_height"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/options_header_margin"
        android:text="@string/options_header"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="@dimen/options_header_textsize"
        android:fontFamily="@string/options_font_family"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_blue_light"/>
    
    <GridLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/options_overlay_shape" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="0"
	        android:layout_gravity="right|top"
	        android:layout_marginLeft="@dimen/options_view_lr_margin"
	        android:layout_marginRight="@dimen/options_view_lr_margin"
	        android:layout_marginTop="@dimen/options_view_tb_margin"
	        android:layout_marginBottom="@dimen/options_view_tb_margin"
	        android:layout_row="0"
	        android:text="@string/options_light_sensing_mode"
	        android:textColor="@color/options_font_color"
	        android:fontFamily="@string/options_font_family" />
	    <Switch
	        android:id="@+id/switchLightSensingMode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="1"
	        android:layout_gravity="left|top"
	        android:layout_marginLeft="@dimen/options_view_lr_margin"
	        android:layout_marginRight="@dimen/options_view_lr_margin"
	        android:layout_marginTop="@dimen/options_view_tb_margin"
	        android:layout_marginBottom="@dimen/options_view_tb_margin"
	        android:layout_row="0" />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="2"
	        android:layout_gravity="center_vertical|right"
	        android:layout_marginLeft="@dimen/options_view_lr_margin"
	        android:layout_marginRight="@dimen/options_view_lr_margin"
	        android:layout_marginTop="@dimen/options_view_tb_margin"
	        android:layout_marginBottom="@dimen/options_view_tb_margin"
	        android:layout_row="0"
	        android:text="@string/options_alpha"
	        android:textColor="@color/options_font_color"
	        android:fontFamily="@string/options_font_family" />
	    <SeekBar
	        android:id="@+id/sliderAlpha"
	        android:layout_width="@dimen/options_slider_width"
	        android:layout_height="wrap_content"
	        android:layout_column="3"
	        android:layout_gravity="fill_horizontal|center_vertical"
	        android:layout_marginRight="@dimen/options_view_lr_margin"
	        android:layout_marginTop="@dimen/options_view_tb_margin"
	        android:layout_marginBottom="@dimen/options_view_tb_margin"
	        android:layout_row="0"
	        android:max="100"/>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="0"
	        android:layout_gravity="right|top"
	        android:layout_marginLeft="@dimen/options_view_lr_margin"
	        android:layout_marginRight="@dimen/options_view_lr_margin"
	        android:layout_marginTop="@dimen/options_view_tb_margin"
	        android:layout_marginBottom="@dimen/options_view_tb_margin"
	        android:layout_row="1"
	        android:enabled="false"
	        android:text="@string/options_auto_flash"
	        android:textColor="@color/options_font_color"
	        android:fontFamily="@string/options_font_family" />
	    <Switch
	        android:id="@+id/switchAutoflash"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:enabled="false"
	        android:layout_column="1"
	        android:layout_gravity="left|top"
	        android:layout_marginLeft="@dimen/options_view_lr_margin"
	        android:layout_marginRight="@dimen/options_view_lr_margin"
	        android:layout_marginTop="@dimen/options_view_tb_margin"
	        android:layout_marginBottom="@dimen/options_view_tb_margin"
	        android:layout_row="1" />
	</GridLayout>
	
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_blue_light"/>
	
    <LinearLayout
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/options_cancel"
            android:textColor="@color/options_font_color"
            style="@android:style/Widget.Holo.Button.Borderless"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/options_save"
            android:textColor="@color/options_font_color"
            style="@android:style/Widget.Holo.Button.Borderless"/>
    </LinearLayout>
    
</LinearLayout>